<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/str_home" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_football"
            android:title="@string/str_sports" />
        <item
            android:id="@+id/nav_economy"
            android:icon="@drawable/ic_chart_areaspline"
            android:title="@string/str_economy" />
        <item
            android:id="@+id/nav_life_style"
            android:icon="@drawable/ic_seat_recline_extra"
            android:title="@string/str_life_style" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_book_open_variant"
            android:title="@string/str_education" />

        <item
            android:id="@+id/nav_foreign_affairs"
            android:icon="@drawable/ic_transit_transfer"
            android:title="@string/str_foreign_affair" />
    </group>

    <item android:title="@null" >
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/str_help_feedback" />
        </menu>
    </item>

</menu>
